chromeos: logging: maintain chrome.LATEST and chrome.PREVIOUS links

In many situations the chrome log is restarted after a crash, and
the previous log (with the information that matters) is not included
in feedback reports.  This changes logging for Chrome OS only (which
already has a bunch of specialized code) to maintain two symlinks
to the two most recent logs.

BUG=chromium:731158
TEST=tested on chromebook, with changes to debugd and chromeos-login

Change-Id: Ia7d037fcbf04c392f6fdc00394c6f73bf92685d9